--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,4 +1,17 @@
+.home {
+   max-width: 1500px;
+   margin: 0 auto;
+}
+
 .home-image {
    width: 100%;
    mask: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+   z-index: -1;
+   margin-bottom: -150px;
+}
+
+.home-row {
+   display: flex;
+   z-index: 1;
+   margin: 0 5px;
 }
