--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -2,7 +2,7 @@
    display: flex;
    flex-direction: column;
    align-items: center;
-   justify-content: flex-end;
+   justify-content: space-between;
    max-height: 400px;
    min-width: 100px;
    margin: 10px;
